# tinker

./: .gitattributes  .gitignore  0README  Plumed.cmake  Plumed.h  README.md  README.txt
aladi/: aladi.key  aladi.xyz
apbs/: 0README  pmpb.c
apbs-config/: apbscfg.h
bench/: 0README  bench1.key  bench1.run  bench2.key  bench2.run  bench2.xyz  bench3.key  bench3.run  bench3.xyz  bench4.dyn0  bench4.key  bench4.run  bench4.xyz  bench5.dyn0  bench5.key  bench5.run  bench5.xyz  bench6.key  bench6.run  bench6.xyz  bench7.key  bench7.run  bench7.seq  bench7.xyz  bench8.key  bench8.run  bench8.seq  bench9.key  bench9.run  results-2.3  results-2.4  results-2.9  results-25.1  results-25.6  results-3.1  results-3.2  results-3.4  results-3.5  results-3.7  results-3.8  (+19 more)
bugs/: issues.txt
classic/: analysis.f  analyze.f  angpot.i  argue.i  atmlst.i  atmtyp.i  atoms.i  bath.i  beeman.f  bndpot.i  bonds.f  bounds.f  bspline.f  center.f  charge.i  chkring.f  chkxyz.f  cholesky.f  chrono.i  column.f  command.f  connect.f  connolly.f  correlate.f  cspline.f  deflate.f  delete.f  diffeq.f  eangang2.f  eangle2.f  ebond3.f  ebuck.f  ebuck3.f  echarge1.f  echarge3.f  echgdpl.f  echgdpl1.f  echgdpl2.f  edipole.f  edipole1.f  (+180 more)
cmake/: 0README  CMakeLists.txt  TinkerOpenMM.cmake
configure/: 0README  Makefile.am  configure.ac
csource/: 0README
doc/: 0README  ISOKINETIC-README  guide.txt  license.txt  summary.txt
example/: 0README  adipic.frac  adipic.key  adipic.xyz  alatet.all  alatet.dvol  alatet.int  alatet.key  alatet.seq  alatet.xyz  alkane.key  alkane.xyz  ammonia.key  ammonia.xyz  amoeba.key  amoeba.xyz  amoebaplus.key  amoebaplus.xyz  amoebapluscf.key  amoebapluscf.xyz  aniline.mol2  aniline.xyz  anthracene.key  anthracene.xyz  aplus.xyz  aplussmall.dyn  aplussmall.key  aplussmall.xyz  arach.int  arach.key  arach.xyz  aspirin.key  aspirin.xyz  azulene.int  azulene.key  azulene.mol2  azulene.xyz  bdna.cif  bdna.int  bdna.key  (+442 more)
ffe/: 0README  server.c
fftw/: 0README  ChangeLog  FFTW3Config.cmake  Makefile  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  configure  configure-cygwin  configure-linux  configure-macosx  configure-opt  configure-orig  configure-windows  fftw3.pc  libtool
fftw-3.2.2/: ChangeLog  Makefile.in  config.h.in  configure  fftw3.pc
fftw-3.3.8/: FFTW3Config.cmake  Makefile  config.h  config.status  fftw3.pc  libfftw3.la  libtool
iEL-SCF_test/: run.sh  water.key  water.prm  water512.xyz
interface/: 0README  CMakeLists.txt  export  parse.py
interface/c/tinker/: modc.h  routines.c  routines.h
interface/c/tinker/detail/: action.hh  alfmol.hh  align.hh  analyz.hh  angang.hh  angbnd.hh  angpot.hh  angtor.hh  argue.hh  ascii.hh  atmlst.hh  atomid.hh  atoms.hh  bath.hh  bitor.hh  bndpot.hh  bndstr.hh  bound.hh  boxes.hh  cell.hh  cflux.hh  charge.hh  chgpen.hh  chgpot.hh  chgtrn.hh  chrono.hh  chunks.hh  couple.hh  ctrpot.hh  deriv.hh  dipole.hh  disgeo.hh  disp.hh  dma.hh  domega.hh  dsppot.hh  energi.hh  ewald.hh  expol.hh  extfld.hh  (+137 more)
interface/cpp/tinker/: modcpp.cpp  modcpp.h  routines.h
interface/cpp/tinker/detail/: action.hh  alfmol.hh  align.hh  analyz.hh  angang.hh  angbnd.hh  angpot.hh  angtor.hh  argue.hh  ascii.hh  atmlst.hh  atomid.hh  atoms.hh  bath.hh  bitor.hh  bndpot.hh  bndstr.hh  bound.hh  boxes.hh  cell.hh  cflux.hh  charge.hh  chgpen.hh  chgpot.hh  chgtrn.hh  chrono.hh  chunks.hh  couple.hh  ctrpot.hh  deriv.hh  dipole.hh  disgeo.hh  disp.hh  dma.hh  domega.hh  dsppot.hh  energi.hh  ewald.hh  expol.hh  extfld.hh  (+137 more)
interface/include/tinker/gfortran/: macro.hh
interface/include/tinker/ifort/: macro.hh
make/: 0README  Makefile  Makefile-apbs  Makefile-ffe-linux  Makefile-ffe-macos  Makefile-ffe-macos-intel  Makefile-ffe-windows  buildmake.py  depend.make
mmff/: 0README  kangle.f  kbond.f  kbond.new  kcharge.f  kopbend.f  kstrbnd.f  ktors.f  kvdw.f  merck.i  mmff.prm  readprm.f
mscale/: 0README  mslave.f
openmm/: 0README  Makefile  README.md  analyze_omm.f  bar_omm.f  dynamic_omm.f  gpu_cards.cu  gpu_usage.m  kopenmm.f  ommdata.f  ommstuf.cpp  ommstuff.cpp  openmm.f  openmm_data.f
openmp/: empole1.f  kewald.f  pme.i
other/: 0README  agda.f  barkema.f  beeman.4site  beeman.5site  biotypes.txt  buildframe.f  bussi.f  catrace.f  distgeom.part  download.f  drotpole.f  dudek.f  eangtor.full  ebond4.f  ehal1.virial  embed.old  empole.both  empole.taper  empole1.both  empole1.symm  empole1.taper  empole2.both  empole3.both  empole3.taper  eopbend.alt  eopbend.orig  eopbend2.full  epolar.f  erf.alt  erf.alt1  erf.alt2  erf.alt3  erxnfld.full  erxnfld.new  erxnfld3.new  estrtor.full  euler.f  ewca.f  ewreg.f  (+64 more)
params/: 0README  amber02.prm  amber14sb.prm  amber19sb.prm  amber94.prm  amber96.prm  amber98.prm  amber99.prm  amber99sb.prm  amoeba04.prm  amoeba09.prm  amoebabio-hfc23.prm  amoebabio09.prm  amoebabio18-hfc23.prm  amoebabio18.prm  amoebail22.prm  amoebanuc17.prm  amoebanuc18.prm  amoebaplus.prm  amoebapluscf.prm  amoebapro04.prm  amoebapro12-lmp2.prm  amoebapro12-mp2cbs.prm  amoebapro12.prm  amoebapro13.prm  basic.prm  charmm19.prm  charmm22.prm  charmm22cmap.prm  charmm27.prm  charmm36.prm  charmm36m.prm  dang.prm  hippo18.prm  hippo19.prm  hoch.prm  iwater.prm  mm2.prm  mm3.prm  mm3pro.prm  (+17 more)
perl/: 0README  bar  bar2  mdavg  octahedron  s-transrot  s-vib  traceless
python/: 0README  boresch.py
rasmol/: 0README  Imakefile  Makefile  Makefile-linux16  Makefile-linux8  abstree.c  abstree.h  applemac.c  bitmaps.h  build.make-alpha  build.make-linux  build.make-sgi  command.c  command.h  font.h  graphics.h  infile.c  infile.h  molecule.c  molecule.h  mswin31.c  outfile.c  outfile.h  pixutils.c  pixutils.h  rasmac.c  rasmol-linux16  rasmol-linux32  rasmol-linux8  rasmol.c  rasmol.h  rasmol.hlp  raswin.c  render.c  render.h  repres.c  repres.h  script.c  script.h  tokens.h  (+3 more)
source/: 0README  CMakeLists.txt  Makefile  Plumed.inc  action.f  action.i  active.f  alchemy.f  alfmol.f  align.i  alterchg.f  alterpol.f  analysis.f  analyz.f  analyz.i  analyze.f  angang.f  angang.i  angbnd.f  angle.i  angles.f  angpot.f  argue.f  (+729 more)
(+3180 files in other folders)
