EXEEXT = .x
ACLOCAL_AMFLAGS= -I .
AM_DEFAULT_SOURCE_EXT = .f

lib_LTLIBRARIES = libtinker.la

libtinker_la_LDFLAGS = $(FLIBS)
libtinker_la_SOURCES = \
	active.f \
	analysis.f \
	angles.f \
	attach.f \
	basefile.f \
	beeman.f \
	bicubic.f \
	bitors.f \
	bonds.f \
	born.f \
	bounds.f \
	calendar.f \
	center.f \
	chkpole.f \
	chkring.f \
	chkxyz.f \
	cholesky.f \
	clock.f \
	cluster.f \
	column.f \
	command.f \
	connect.f \
	connolly.f \
	control.f \
	cspline.f \
	cutoffs.f \
	deflate.f \
	delete.f \
	diagq.f \
	diffeq.f \
	eangang.f \
	eangang1.f \
	eangang2.f \
	eangang3.f \
	eangle.f \
	eangle1.f \
	eangle2.f \
	eangle3.f \
	ebond.f \
	ebond1.f \
	ebond2.f \
	ebond3.f \
	ebuck.f \
	ebuck1.f \
	ebuck2.f \
	ebuck3.f \
	echarge.f \
	echarge1.f \
	echarge2.f \
	echarge3.f \
	echgdpl.f \
	echgdpl1.f \
	echgdpl2.f \
	echgdpl3.f \
	edipole.f \
	edipole1.f \
	edipole2.f \
	edipole3.f \
	egauss.f \
	egauss1.f \
	egauss2.f \
	egauss3.f \
	egeom.f \
	egeom1.f \
	egeom2.f \
	egeom3.f \
	ehal.f \
	ehal1.f \
	ehal2.f \
	ehal3.f \
	eimprop.f \
	eimprop1.f \
	eimprop2.f \
	eimprop3.f \
	eimptor.f \
	eimptor1.f \
	eimptor2.f \
	eimptor3.f \
	elj.f \
	elj1.f \
	elj2.f \
	elj3.f \
	embed.f \
	emetal.f \
	emetal1.f \
	emetal2.f \
	emetal3.f \
	emm3hb.f \
	emm3hb1.f \
	emm3hb2.f \
	emm3hb3.f \
	empole.f \
	empole1.f \
	empole2.f \
	empole3.f \
	energy.f \
	eopbend.f \
	eopbend1.f \
	eopbend2.f \
	eopbend3.f \
	eopdist.f \
	eopdist1.f \
	eopdist2.f \
	eopdist3.f \
	epitors.f \
	epitors1.f \
	epitors2.f \
	epitors3.f \
	erf.f \
	erxnfld.f \
	erxnfld1.f \
	erxnfld2.f \
	erxnfld3.f \
	esolv.f \
	esolv1.f \
	esolv2.f \
	esolv3.f \
	estrbnd.f \
	estrbnd1.f \
	estrbnd2.f \
	estrbnd3.f \
	estrtor.f \
	estrtor1.f \
	estrtor2.f \
	estrtor3.f \
	etors.f \
	etors1.f \
	etors2.f \
	etors3.f \
	etortor.f \
	etortor1.f \
	etortor2.f \
	etortor3.f \
	eurey.f \
	eurey1.f \
	eurey2.f \
	eurey3.f \
	evcorr.f \
	extra.f \
	extra1.f \
	extra2.f \
	extra3.f \
	fatal.f \
	fft3d.f \
	fftpack.f \
	field.f \
	final.f \
	flatten.f \
	freeunit.f \
	geometry.f \
	getint.f \
	getkey.f \
	getmol2.f \
	getnumb.f \
	getpdb.f \
	getprm.f \
	getref.f \
	getstring.f \
	gettext.f \
	getword.f \
	getxyz.f \
	gradient.f \
	gradrgd.f \
	gradrot.f \
	groups.f \
	grpline.f \
	gyrate.f \
	hessian.f \
	hessrgd.f \
	hessrot.f \
	hybrid.f \
	image.f \
	impose.f \
	induce.f \
	inertia.f \
	initial.f \
	initprm.f \
	initres.f \
	initrot.f \
	insert.f \
	invbeta.f \
	invert.f \
	jacobi.f \
	kangang.f \
	kangle.f \
	katom.f \
	kbond.f \
	kcharge.f \
	kdipole.f \
	kewald.f \
	kgeom.f \
	kimprop.f \
	kimptor.f \
	kinetic.f \
	kmetal.f \
	kmpole.f \
	kopbend.f \
	kopdist.f \
	korbit.f \
	kpitors.f \
	kpolar.f \
	ksolv.f \
	kstrbnd.f \
	kstrtor.f \
	ktors.f \
	ktortor.f \
	kurey.f \
	kvdw.f \
	lattice.f \
	lbfgs.f \
	lights.f \
	makeint.f \
	makepdb.f \
	makeref.f \
	makexyz.f \
	maxwell.f \
	mdinit.f \
	mdrest.f \
	mdsave.f \
	mdstat.f \
	mechanic.f \
	merge.f \
	molecule.f \
	moments.f \
	mutate.f \
	nblist.f \
	nextarg.f \
	nexttext.f \
	nspline.f \
	number.f \
	numeral.f \
	numgrad.f \
	ocvm.f \
	openend.f \
	optsave.f \
	orbital.f \
	orient.f \
	orthog.f \
	overlap.f \
	piscf.f \
	pmepol.f \
	pmpb.f \
	polymer.f \
	precise.f \
	pressure.f \
	prmkey.f \
	promo.f \
	prtdyn.f \
	prterr.f \
	prtint.f \
	prtmol2.f \
	prtpdb.f \
	prtprm.f \
	prtseq.f \
	prtxyz.f \
	quatfit.f \
	random.f \
	rattle.f \
	readdyn.f \
	readgau.f \
	readint.f \
	readmol2.f \
	readpdb.f \
	readprm.f \
	readseq.f \
	readxyz.f \
	replica.f \
	rgdstep.f \
	rings.f \
	rmsfit.f \
	rotlist.f \
	rotpole.f \
	sdstep.f \
	search.f \
	server.f \
	shakeup.f \
	sigmoid.f \
	sktstuff.f \
	sort.f \
	square.f \
	suffix.f \
	surface.f \
	surfatom.f \
	switch.f \
	temper.f \
	tncg.f \
	torphase.f \
	torque.f \
	torsions.f \
	trimtext.f \
	unitcell.f \
	verlet.f \
	version.f \
	volume.f \
	xyzatm.f \
	zatom.f

AM_LDFLAGS = $(BIN_LDFLAGS)
LDADD = libtinker.la

bin_PROGRAMS = \
	alchemy \
	analyze \
	anneal \
	archive \
	correlate \
	crystal \
	diffuse \
	distgeom \
	document \
	dynamic \
	gda \
	intedit \
	intxyz \
	minimize \
	minirot \
	minrigid \
	monte \
	newton \
	newtrot \
	nucleic \
	optimize \
	optirot \
	optrigid \
	path \
	pdbxyz \
	polarize \
	poledit \
	potential \
	prmedit \
	protein \
	pss \
	pssrigid \
	pssrot \
	radial \
	saddle \
	scan \
	sniffer \
	spacefill \
	spectrum \
	superpose \
	sybylxyz \
	testgrad \
	testhess \
	testpair \
	testrot \
	timer \
	timerot \
	torsfit \
	valence \
	vibbig \
	vibrate \
	vibrot \
	xtalfit \
	xtalmin \
	xyzedit \
	xyzint \
	xyzpdb \
	xyzsybyl

